{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 167,
  "lineage": "6ddcae19-3e19-7467-31e7-948b8a4050ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-private-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-0d74b59773148d704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 2037,
            "cidr_block": "10.1.80.0/21",
            "default_for_az": false,
            "id": "subnet-0d74b59773148d704",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961518039473",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-private-0"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-038fa9d9a69d6561e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 2039,
            "cidr_block": "10.1.88.0/21",
            "default_for_az": false,
            "id": "subnet-038fa9d9a69d6561e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961518039473",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-private-1"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-public-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-0088df5de3a4fe490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 2024,
            "cidr_block": "10.1.0.0/21",
            "default_for_az": false,
            "id": "subnet-0088df5de3a4fe490",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961518039473",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-public-0"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ramp_up_training-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:subnet/subnet-055c41fce697f9cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 2035,
            "cidr_block": "10.1.8.0/21",
            "default_for_az": false,
            "id": "subnet-055c41fce697f9cca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961518039473",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training-public-1"
            },
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ramp_up_training",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:vpc/vpc-0d2831659ef89870c",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01815efd6a5df2a0a",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-553f7230",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2831659ef89870c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03654b638b2fa05dc",
            "owner_id": "961518039473",
            "state": "available",
            "tags": {
              "Name": "ramp_up_training"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-backend-carloscardenas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-backend-carloscardenas/f3c7ab98a48a123a",
            "arn_suffix": "app/lb-backend-carloscardenas/f3c7ab98a48a123a",
            "dns_name": "lb-backend-carloscardenas-2112336456.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-backend-carloscardenas/f3c7ab98a48a123a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-backend-carloscardenas",
            "security_groups": [
              "sg-0e793e877830bf9f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038fa9d9a69d6561e"
              },
              {
                "subnet_id": "subnet-0d74b59773148d704"
              }
            ],
            "subnets": [
              "subnet-038fa9d9a69d6561e",
              "subnet-0d74b59773148d704"
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "vpc_id": "vpc-0d2831659ef89870c",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.securitygroup-api-carloscardenas-ec2",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-frontend-carloscardenas-inter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-frontend-carloscardenas-inter/310e594c72503cf5",
            "arn_suffix": "app/lb-frontend-carloscardenas-inter/310e594c72503cf5",
            "dns_name": "lb-frontend-carloscardenas-inter-380648314.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-frontend-carloscardenas-inter/310e594c72503cf5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-frontend-carloscardenas-inter",
            "security_groups": [
              "sg-0234649fac1be4410"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0088df5de3a4fe490"
              },
              {
                "subnet_id": "subnet-055c41fce697f9cca"
              }
            ],
            "subnets": [
              "subnet-0088df5de3a4fe490",
              "subnet-055c41fce697f9cca"
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "vpc_id": "vpc-0d2831659ef89870c",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.securitygroup-ui-carloscardenas-ec2",
            "data.aws_subnet.ramp_up_training-public-0",
            "data.aws_subnet.ramp_up_training-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbl-backend-carloscardenas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/lb-backend-carloscardenas/f3c7ab98a48a123a/dd9c2aabfc710af1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/targetgroupBackendCarlosCardenas/0c9fd279b06507ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/lb-backend-carloscardenas/f3c7ab98a48a123a/dd9c2aabfc710af1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-backend-carloscardenas/f3c7ab98a48a123a",
            "port": 8085,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-backend-carloscardenas",
            "aws_lb_target_group.targetgroupBackendCarlosCardenas",
            "aws_security_group.securitygroup-api-carloscardenas-ec2",
            "data.aws_subnet.ramp_up_training-private-0",
            "data.aws_subnet.ramp_up_training-private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbl-frontend-carloscardenas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/lb-frontend-carloscardenas-inter/310e594c72503cf5/1feb9d14d64f6fe8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/tgroup-ccardenas-ui-internet/6a22721e443691b6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:listener/app/lb-frontend-carloscardenas-inter/310e594c72503cf5/1feb9d14d64f6fe8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:loadbalancer/app/lb-frontend-carloscardenas-inter/310e594c72503cf5",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-frontend-carloscardenas-inter",
            "aws_lb_target_group.tgroup-ccardenas-ui-internet",
            "aws_security_group.securitygroup-ui-carloscardenas-ec2",
            "data.aws_subnet.ramp_up_training-public-0",
            "data.aws_subnet.ramp_up_training-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroupBackendCarlosCardenas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/targetgroupBackendCarlosCardenas/0c9fd279b06507ed",
            "arn_suffix": "targetgroup/targetgroupBackendCarlosCardenas/0c9fd279b06507ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/targetgroupBackendCarlosCardenas/0c9fd279b06507ed",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetgroupBackendCarlosCardenas",
            "port": 8085,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgroup-ccardenas-ui-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/tgroup-ccardenas-ui-internet/6a22721e443691b6",
            "arn_suffix": "targetgroup/tgroup-ccardenas-ui-internet/6a22721e443691b6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:961518039473:targetgroup/tgroup-ccardenas-ui-internet/6a22721e443691b6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tgroup-ccardenas-ui-internet",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d2831659ef89870c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup-api-carloscardenas-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0e793e877830bf9f0",
            "description": "Allow traffic for API side",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e793e877830bf9f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "securitygroup-api-carloscardenas-ec2",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup-ui-carloscardenas-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0234649fac1be4410",
            "description": "Allow traffic for API side",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0234649fac1be4410",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "securitygroup-ui-carloscardenas-ec2",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "tags_all": {
              "project": "ramp-up-devops",
              "responsible": "carlos.cardenasp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}